--- a/wonitor/css/wonitor.css
+++ b/wonitor/css/wonitor.css
@@ -20,6 +20,11 @@ h2 {
   margin-left: 6px;
   text-shadow: 0px 0px 3px #aaaaaa;
 }
+h2 span {
+  font-size: 16px;
+  color:rgba(255,255,255,0.3);
+  text-shadow: 0px 0px 2px #555555;
+}
 .container {
   width: 100%;
   height: auto;
